refactor: 서비스 테스트 코드 수정